...
            }
            TextField(
                value = diary.title,
                onValueChange = { onAction(DiaryEditAction.TitleChanged(it)) },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("diary_edit_title_field")
                    .background(
                        color = MaterialTheme.colorScheme.surface,
                        RoundedCornerShape(12.dp)
                    )
                    .border(
                        if (isTitleError) 1.dp else 0.5.dp,
...
            TextField(
                value = diary.content,
                onValueChange = { onAction(DiaryEditAction.ContentChanged(it)) },
                modifier = Modifier
                    .fillMaxWidth()
                    .weight(1f)
                    .testTag("diary_edit_content_field")
                    .background(
                        color = MaterialTheme.colorScheme.surface,
                        RoundedCornerShape(12.dp)
                    )
                    .border(
                        if (isContentError) 1.dp else 0.5.dp,
...
        )
        LoadingIconButton(
            isLoading = isSaving,
            onClick = { onAction(DiaryEditAction.SaveClicked) },
            modifier = Modifier
                .padding(end = 4.dp)
                .testTag("diary_edit_save_button"),
            colors = IconButtonDefaults.filledIconButtonColors(
                containerColor = MaterialTheme.colorScheme.primary,
                contentColor = MaterialTheme.colorScheme.onPrimary
            ),
            iconContent = { isLoading ->
                Icon(
...
