...
                    .padding(horizontal = 16.dp, vertical = 8.dp)
            ) {
                DockedSearchBar(
                    modifier = Modifier.align(Alignment.TopCenter),
                    inputField = {
                        SearchBarDefaults.InputField(
                            modifier = Modifier.testTag("search_query_field"),
                            query = state.searchQuery,
                            onQueryChange = { onAction(SearchAction.UpdateSearchQuery(it)) },
                            onSearch = {
                                onAction(SearchAction.Search(it))
                                expanded = false
                                keyboardController?.hide()
...
